# cleany

./: .gitignore  .gitmodules  AGENT.md  AGENTS.md  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
.helix/: config.toml  languages.toml
configs/: README.md
configs/mission/: README.md
configs/robot/: README.md
ros2_ws/: README.md  pyrightconfig.json
ros2_ws/.helix/: languages.toml
ros2_ws/rosdep/: README.md  cleany.yaml
ros2_ws/src/cleany_gazebo_sim/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/cleany_gazebo_sim/cleany_gazebo_sim/: __init__.py  command_guard.py  odom_tf_publisher.py  parameters.py  world_generator.py
ros2_ws/src/cleany_gazebo_sim/config/: base.yaml  bridge.yaml
ros2_ws/src/cleany_gazebo_sim/launch/: gazebo_sim.launch.py
ros2_ws/src/cleany_gazebo_sim/resource/: cleany_gazebo_sim
ros2_ws/src/cleany_gazebo_sim/test/: test_parameters.py  test_world_structure.py
ros2_ws/src/cleany_gazebo_sim/worlds/: cleany_mecanum_prototype.sdf
ros2_ws/src/cleany_interfaces/: README.md
ros2_ws/src/cleany_logger/: README.md
ros2_ws/src/cleany_mission_manager/: DESIGN.md  README.md  package.xml  research.md  setup.py
ros2_ws/src/cleany_mission_manager/cleany_mission_manager/: __init__.py
ros2_ws/src/cleany_mission_manager/cleany_mission_manager/core/: __init__.py  manager.py  models.py  ports.py  result.py  states.py
ros2_ws/src/cleany_mission_manager/cleany_mission_manager/mocks/: __init__.py  components.py
ros2_ws/src/cleany_mission_manager/notes/: DECISIONS.old.md  DESIGN.old.md
ros2_ws/src/cleany_mission_manager/tests/: test_mission_flow.py
ros2_ws/src/cleany_mujoco_sim/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/cleany_mujoco_sim/cleany_mujoco_sim/: scene_loader.py  sim_node.py  state.py
ros2_ws/src/cleany_mujoco_sim/hardware/: props.xml  scene.xml  xlerobot.xml
ros2_ws/src/cleany_mujoco_sim/launch/: mujoco_sim.launch.py
ros2_ws/src/cleany_mujoco_sim/test/: conftest.py  test_scene_loader.py  test_scene_props.py  test_sim_node.py  test_state.py
ros2_ws/src/cleany_mujoco_sim/typings/mujoco/: _enums.pyi  _functions.pyi  _structs.pyi
ros2_ws/src/cleany_mujoco_sim/typings/mujoco/rendering/classic/: renderer.pyi
ros2_ws/src/cleany_perception/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
ros2_ws/src/cleany_perception/cleany_perception/: annotate.py  detection_node.py  detection_to_msg.py  detector.py  imaging.py
ros2_ws/src/cleany_perception/config/: detection.yaml
ros2_ws/src/cleany_perception/launch/: detection_sim.launch.py
ros2_ws/src/cleany_perception/models/: .gitignore  README.md
ros2_ws/src/cleany_perception/test/: test_annotate.py  test_detection_node.py  test_detection_to_msg.py  test_detector.py  test_imaging.py
ros2_ws/src/cleany_planner/: README.md
ros2_ws/src/cleany_robot_interface/: README.md
ros2_ws/src/cleany_skill_executor/: README.md
scripts/: colcon  docker-bash-humble.sh  docker-build-humble.sh  docker-down-humble.sh  docker-exec-humble.sh  docker-logs-humble.sh  docker-rebuild-humble.sh  docker-up-humble.sh  pyright-docker  pytest-ros  ros2  ros2-build  ros2-clean  ros2-test  rosdep
simulation/: README.md
simulation/mujoco/: main.py  pyproject.toml  pyrightconfig.json
simulation/mujoco/hardware/: scene.xml  xlerobot.xml
simulation/mujoco/typings/mujoco/: __init__.pyi  _constants.pyi  _specs.pyi
tests/: README.md
tests/integration/: README.md
tools/: README.md
tools/scripts/: README.md
