<?xml version="1.0"?>
<package format="3">
  <name>cleany_mission_manager</name>
  <version>0.0.1</version>
  <description>Cleany mission lifecycle and FSM manager.</description>
  <maintainer email="team@example.com">Cleany Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
