<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cleany_mujoco_sim</name>
  <version>0.1.0</version>
  <description>MuJoCo simulation node for the Cleany XLeRobot platform.</description>
  <maintainer email="sw292ljh@gmail.com">이정현</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>mujoco</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
