<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cleany_perception</name>
  <version>0.1.0</version>
  <description>Perception node for the Cleany robot: turns camera images into object detection candidates.</description>
  <maintainer email="sw292ljh@gmail.com">이정현</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>vision_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>ultralytics</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
